--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            Header Logo
+        </div>
+        <a href=""> header link 1</a>
+        <a href=""> header link 2</a>
+    </header>
     
 </body>
 </html>
