--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,72 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="header">
         <div class="logo">
             Header Logo
-        </div>
-        <a href=""> header link 1</a>
+        </div> 
+        <div class="hlinks">
+            <a href=""> header link 1</a>
         <a href=""> header link 2</a>
+        </div>
+        
     </div>
-    
+    <div class="container1">
+        <div class="content">
+            <div class="headertxt">This website is awesome</div>
+            <div class="text">
+                This website has some subtext that goes here under the main
+                title.It's a smaller font and the color is lower contrast
+            </div>
+            <button>Sign up</button>
+        </div>
+        <div class="imgcont">
+        <img src="" alt="img">
+    </div>
+    </div>
+    <div class="container2">
+            <div class="headertxt2">Some random information</div>
+            <div class="one">
+                <img src="" alt="img">
+                <p>this is some subtext under an illustration
+                    or image</p>
+            </div>
+            <div class="two">
+                <img src="" alt="img">
+                <p>this is some subtext under an illustration
+                    or image</p>
+            </div>
+            <div class="three">
+                <img src="" alt="img">
+                <p>this is some subtext under an illustration
+                    or image</p>
+            </div>
+            <div class="four">
+                <img src="" alt="img">
+                <p>this is some subtext under an illustration
+                    or image</p>
+            </div>
+    </div>
+    <div class="container3">
+        <p id="quote">
+            This is an inspiring quote, or a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually
+            read it. Who knows? All I know is that it looks nice.
+        </p>
+        <p id="person">-Thor, God of Thunder</p>
+    </div>
+    <div class="container4">
+        <div class="content4">
+            <div class="headertxt4"></div>
+            <div class="txt"></div>
+            <button>Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>
 </body>
+
 </html>
