--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
     <div class="container2">
             <div class="headertxt2">Some random information</div>
+        <div class="imgs">
             <div class="one">
                 <img src="" alt="img">
                 <p>this is some subtext under an illustration
@@ -55,6 +56,7 @@
                 <p>this is some subtext under an illustration
                     or image</p>
             </div>
+        </div>
     </div>
     <div class="container3">
         <p id="quote">
