2nd section styles

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
                 <p>this is some subtext under an illustration
                     or image</p>
             </div>
-            <div class="two">
+            <div class="one">
                 <img src="" alt="img">
                 <p>this is some subtext under an illustration
                     or image</p>
             </div>
-            <div class="three">
+            <div class="one">
                 <img src="" alt="img">
                 <p>this is some subtext under an illustration
                     or image</p>
             </div>
-            <div class="four">
+            <div class="one">
                 <img src="" alt="img">
                 <p>this is some subtext under an illustration
                     or image</p>
