--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     </div>
     <div class="container2">
-            <div class="headertxt2">Some random information</div>
+            <div class="headertxt2">Some random information.</div>
         <div class="imgs">
             <div class="one">
                 <img src="" alt="img">
