--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
     </div>
     <div class="container4">
         <div class="content4">
-            <div class="headertxt4"></div>
-            <div class="txt"></div>
-            <button>Sign up</button>
+            <div class="headertxt4">Call to action! It's time!</div>
+            <div class="txt">Sign up for our product by clicking that button right over there!</div>
+            
         </div>
+        <button id="btn">Sign up</button>
     </div>
     <div class="footer">
         Copyright © The Odin Project 2021
